--- a/projects/lib/canvas-page.css
+++ b/projects/lib/canvas-page.css
@@ -4,4 +4,10 @@ html, body, canvas {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+}
+
+h1 {
+    letter-spacing: 40px;
+    text-align: center;
 }
