--- a/projects/jump/styles/styles.css
+++ b/projects/jump/styles/styles.css
@@ -5,6 +5,7 @@ html, body {
   padding: 0;
   background-color: #000;
   overflow: hidden;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
 canvas {
