--- a/projects/jump/styles/styles.css
+++ b/projects/jump/styles/styles.css
@@ -37,3 +37,14 @@ button:hover {
 button:active {
   opacity: 0.7;
 }
+
+.game-over {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 260px;
+  height: 30px;
+  margin: -25px 0 0 -130px;
+  text-align: center;
+  color: #fff;
+}
